--- a/Style.css
+++ b/Style.css
@@ -54,6 +54,12 @@ a:visited{
     color: white;
 }
 
+.clr{
+    clear:both ;
+}
+
+
+
 .box-1{
     background-color: #333;
     color: white;
@@ -141,3 +147,64 @@ text-align: center;
     padding: 10px;
     box-sizing: border-box;
 }
+
+#main-block{
+    float: left;
+    width: 70%;
+}
+
+#sidebar{
+    float: right;
+    width: 30%;
+    background-color: #333;
+    color: #fff;
+    padding: 15px;
+    box-sizing: border-box;
+}
+
+.p-box{
+    width: 800px;
+    height: 500px;
+    border: 1px solid black;
+    position: relative;
+    background-image: url('./Images/Abstract.jpg');
+    background-repeat: no-repeat;
+    background-position: 100px 200px;
+    background-position: center center;
+}
+
+.p-box h1{
+    position: absolute;
+    top:40px;
+    left: 200px;
+}
+
+.p-box h2{
+    position: absolute;
+    bottom: 40px;
+    right: 100px;
+}
+
+.fix-me{
+    position: fixed;
+    top: 400px;
+}
+
+.my-list li:first-child{
+    background: red;
+}
+
+.my-list li:last-child{
+    background: blue
+}
+
+.my-list li:nth-child(3){
+    background:orange
+}
+
+.my-list li:nth-child(even){
+    background:green
+}
+
+
+
